--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<script type="text/javascript" src="123.js">
 		</script>
 	</head>
-	<body class="bobo">
+	<body class="bobo" style="min-width: 1200px;">
 		<div class="aside"><a href="https://www.instagram.com/e55245/?hl=zh-tw"><img src="IMAGE/ig.jpg" class="ig" ></a></div>
 		<div class="aside2"><a href="https://www.facebook.com/profile.php?id=100004073287605"><img src="IMAGE/fb.png" class="fb"></a></div>
 		<button class="js-back-to-top back-to-top" title="回到頭部" style="font-size:20px;font-weight:bold;">&#65085;</button>
@@ -104,8 +104,8 @@
 														<div style="clear: both;">
 														</div>
 													</div>
-													<div class = "title" id="a3">| Experience |</div>
-													<div class="experience">
+													<div class = "title" id="a3" >| Experience |</div>
+													<div class="experience" >
 														── 國際  ──<br>
 														代表振聲高中 於日本鹿耳島高校 進行致詞、接待<br><br>
 														── 校外  ──<br>
